[metadata]
name = ymltoxml
version = attr: ymltoxml.__version__
url = https://github.com/sarnold/ymltoxml
author = Stephen Arnold
author_email = nerdboy@gentoo.org
description = Asynchronous MAVLink connection library.
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license = GPLv2
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.6
install_requires =
    importlib-metadata; python_version < '3.8'
    importlib_resources; python_version < '3.10'
    xmltodict
    munch
    ruamel.yaml
    PyYAML

packages = find_namespace:
package_dir =
    =src

#include_package_data = True

[options.packages.find]
where = src

[options.package_data]
ymltoxml.data =
    *.yaml

[options.entry_points]
console_scripts =
    ymltoxml = ymltoxml.ymltoxml:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
test =
    pytest
cov =
    pytest-cov
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
