[metadata]
name = ymltoxml
version = attr: setuptools_scm.get_version
description = Console tools for YAML and XML processing with config files in YAML.
url = https://github.com/sarnold/ymltoxml
author = Stephen Arnold
author_email = nerdboy@gentoo.org
long_description = file: README.rst
long_description_content_type = text/rst; charset=UTF-8
license_expression = LGPL-2.1-or-later
license_files = LICENSE
license = LGPLv2+
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    importlib-resources; python_version < '3.10'
    nested-lookup
    xmltodict
    munch
    ruamel.yaml
    PyYAML
    dpath

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
ymltoxml.data =
    *.yaml

[options.entry_points]
console_scripts =
    ymltoxml = ymltoxml.ymltoxml:main
    yasort = ymltoxml.yasort:main
    yagrep = ymltoxml.yagrep:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
