[metadata]
name = yaml-tools
version = attr: setuptools_scm.get_version
description = Console tools for YAML, CSV, and XML processing with config files in YAML.
url = https://github.com/sarnold/yaml-tools
author = Stephen Arnold
author_email = stephen.arnold42@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = LGPL-2.1-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Analysis
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    dpath
    importlib-resources; python_version < '3.10'
    jinja2
    natsort
    nested-lookup
    xmltodict
    munch[yaml]
    ruamel.yaml
    pystache==0.6.5

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
yaml_tools.data =
    *.txt
    *.yaml

[options.entry_points]
console_scripts =
    ymltoxml = yaml_tools.ymltoxml:main
    yasort = yaml_tools.yasort:main
    yagrep = yaml_tools.yagrep:main
    oscal = yaml_tools.oscal:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
demos =
    diskcache
    fuzzy_match
    numpy

doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    pytest
    pytest-cov
cov =
    coverage[toml]
    coverage_python_version
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

per-file-ignores =
    */templates.py: E501

max-line-length = 99
